fixed pixel overlapping materialCards

--- a/style.css
+++ b/style.css
@@ -191,8 +191,8 @@ a
     padding-bottom: 15px;
     padding-top: 15px;
 
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 22px;
+    border-bottom-right-radius: 22px;
 }
 .cardContainer img{
     width: 100%;
